@@ -89,6 +89,21 @@ namespace AxCharacterShaders.AxTips
             Description = "カテゴリタイトルの右端をクリックすると説明が表示されます。";
         }
     }
+    class AxcsGenerator : AxcsTip
+    {
+        public AxcsGenerator()
+        {
+            Title = "Generator";
+            Description = "「Opaque, Fade, Cutout, FadeRefracted」の4種類のシェーダーから、「StencilReader, StencilWriter, EmissiveFreak, Outline」のバリエーションを作ることができます。 全てのシェーダーを再生成する場合は、メニューの番号順に実行してください。 自動生成されるシェーダーのプロパティに手を加えたい場合は、アセット内の [ArxCharacterShaders\\Editor\\Generator\\AxGenerator.cs] 内に定義されている書き換えコードを修正してください。";
+            properties = new Property[] {
+                new Property("1.GenerateStencilWriter", "CutoutからStencilWriter_Cutoutを作成します。"),
+                new Property("2.GenerateStencilReader", "Cutout, Fade, FadeRefractedからStencilReader_〇〇を作成します。"),
+                new Property("※StencilReader_DoubleFadeについて", "DoubleFadeは自動生成の対象ではないため、手動で整える必要があります。 StencilReader_Fadeを参考に修正してください。", 1),
+                new Property("3.GenerateEmissiveFreak", "EmissiveFreak, Outline以外のシェーダーからEmissiveFreak_〇〇を作成します。"),
+                new Property("4.GenerateOutline", "Fade, Outline以外のシェーダーからOutline_〇〇を作成します。"),
+            };
+        }
+    }
     class Common : AxcsTip
     {
         public Common()
