@@ -1,3 +1,12 @@
+2020/11/24 build 8----------------------
+・マテリアル設定インスペクタの一番上に、現在選択中のシェーダーバリエーションについての説明を追加しました。
+「〇〇について」の見出しをクリックすると説明が見られます。
+・各設定カテゴリについて説明するウィンドウを追加しました。
+説明を見たい設定カテゴリの右端にあるヘルプアイコンをクリックしてください。
+・Stencil, EmissiveFreak, Outline関連の類似バリエーションをOpaque, Fade, Cutoutから動的に作るメニューを追加しました。
+「AXCS/Generator」メニューから実行できますが、シェーダー改変の予定がなければ使用する意味もありません。
+　・↑に伴い、EmissiveFreakとOutlineバリエーションにいくつかシェーダーバリエーションが増えた気がする、たぶん。
+
 2020/11/04 build 7----------------------
 ・以下のシェーダーバリエーションでAmbient Light Intensityが使用出来なくなっていた問題を修正
 EmissiveFreakFade
